changed the Title

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 	<!-- Titles -->
-	<title>Start HTML - simple</title>
+	<title>Freezing rain</title>
 	<meta name="keywords" content="Freezing rain, ice, rain, flowers in ice, icy rain, ice rain, pictures">
     <meta name="description" content="Freezing rain, ice, rain, flowers in ice, icy rain, ice rain, pictures">
 
